Lime theme, more updates on partners

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Fred Okech | Creative Developer</title>
     <meta name="description"
         content="Fred Okech - Creative web developer building scalable web solutions, interactive dashboards, offline apps, and algorithm visualizers.">
+    <meta property="og:title" content="Fred Okech | Creative Developer">
+    <meta property="og:description"
+        content="Creative web developer building scalable web solutions, interactive dashboards, offline apps, and algorithm visualizers.">
+
 
     <!-- Google Fonts for modern typography -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,7 +32,8 @@
     <header>
         <nav aria-label="Main navigation">
             <div class="logo">Fred<span class="gradient-text">Okech</span>.</div>
-            <div class="menu-toggle" id="mobile-menu" aria-label="Toggle navigation menu" role="button" tabindex="0">
+            <div class="menu-toggle" id="mobile-menu" aria-label="Toggle navigation menu" role="button" tabindex="0"
+                aria-expanded="false">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -45,7 +50,7 @@
     <main>
         <!-- HERO SECTION -->
         <section id="hero" aria-label="Hero section">
-            <canvas id="canvas-bg">Your browser does not support HTML5 Canvas</canvas>
+            <canvas id="canvas-bg" aria-hidden="true">Your browser does not support HTML5 Canvas</canvas>
             <div class="hero-content fade-in-section">
                 <p class="hero-subtitle">Hi, my name is</p>
                 <h1 class="hero-title">Fred Okech.</h1>
@@ -75,6 +80,182 @@
                     I write code that actually does stuff—frontend, backend, or both. If it solves problems, I’m on it.
                     Constantly learning, always shipping.
                 </p>
+            </div>
+        </section>
+
+
+        <!-- LIME HIGHLIGHT BAND -->
+        <section class="lime-band">
+            <div class="lime-band-content">
+                <h2>Building Practical, Scalable & Human-Centered Systems</h2>
+                <p>
+                    I design and develop digital solutions that solve real problems,
+                    from data-driven dashboards and offline-first apps to community-focused
+                    platforms that actually get used.
+                </p>
+
+                <div class="lime-band-tags">
+                    <span>Web Development</span>
+                    <span>Systems Design</span>
+                    <span>Data & Automation</span>
+                    <span>Community Tech</span>
+                </div>
+            </div>
+
+        </section>
+
+        <!-- PRARTNERS -->
+        <section class="partners">
+            <h2>Organizations I’ve Worked With</h2>
+
+            <div class="logo-slider">
+                <div class="logo-track">
+
+                    <!-- Logo with overlay -->
+                    <div class="logo-container">
+                        <img src="images/glory.jpg" alt="Glory Missionary Girls Centre">
+                        <div class="logo-info">
+                            Developed a results management system and handled IT operations.
+                        </div>
+                    </div>
+
+                    <div class="logo-container">
+                        <img src="images/jkuat.png" alt="JKUAT">
+                        <div class="logo-info">
+                            Assisted in IT projects and supported digital learning initiatives.
+                        </div>
+                    </div>
+
+                    <div class="logo-container">
+                        <img src="images/un1.jpg" alt="United Nations">
+                        <div class="logo-info">
+                            Volunteered online for the 2024 global international volunteers day.
+                        </div>
+                    </div>
+
+                    <div class="logo-container">
+                        <img src="images/stkevin.jpg" alt="St. Kevin Hill Schools">
+                        <div class="logo-info">
+                            Implemented cybersecurity measures and managed digital learning tools.
+                        </div>
+                    </div>
+
+                    <div class="logo-container">
+                        <img src="images/plan.png" alt="Medruok">
+                        <div class="logo-info">
+                            Conducted research on informal community groups across Migori County.
+                        </div>
+                    </div>
+
+                    <div class="logo-container">
+                        <img src="images/malili.jpg" alt="Malili Distributors">
+                        <div class="logo-info">
+                            Led product distribution and optimized inventory through DMS.
+                        </div>
+                    </div>
+
+                    <div class="logo-container">
+                        <img src="images/wmi.png" alt="WMI">
+                        <div class="logo-info">
+                            Developed and managed scholar portal and digital media communications.
+                        </div>
+                    </div>
+
+                    <div class="logo-container">
+                        <img src="images/medruok.png" alt="Medruok">
+                        <div class="logo-info">
+                            Built community agriculture initiatives and managed member programs.
+                        </div>
+                    </div>
+
+                    <div class="logo-container">
+                        <img src="images/iebc.png" alt="IEBC">
+                        <div class="logo-info">
+                            Served as Presiding Officer, tech support, and voter registration using KIEMS kits.
+                        </div>
+                    </div>
+
+                    <div class="logo-container">
+                        <img src="images/robisearch.jpg" alt="Robisearch">
+                        <div class="logo-info">
+                            Consulted on multiple software development projects, providing technical guidance and reviews.
+                        </div>
+                    </div>
+
+
+
+                    <!-- Duplicate logos for seamless scrolling -->
+                    <div class="logo-container">
+                        <img src="images/glory.jpg" alt="">
+                        <div class="logo-info">
+                            Developed a results management system and handled IT operations.
+                        </div>
+                    </div>
+
+                    <div class="logo-container">
+                        <img src="images/jkuat.png" alt="">
+                        <div class="logo-info">
+                            Assisted in IT projects and supported digital learning initiatives.
+                        </div>
+                    </div>
+
+                    <div class="logo-container">
+                        <img src="images/un1.jpg" alt="">
+                        <div class="logo-info">
+                            Volunteered online for the 2024 global international volunteers day.
+                        </div>
+                    </div>
+
+                    <div class="logo-container">
+                        <img src="images/stkevin.jpg" alt="">
+                        <div class="logo-info">
+                            Implemented cybersecurity measures and managed digital learning tools.
+                        </div>
+                    </div>
+
+                    <div class="logo-container">
+                        <img src="images/plan.png" alt="">
+                        <div class="logo-info">
+                            Conducted research on informal community groups across Migori County.
+                        </div>
+                    </div>
+
+                    <div class="logo-container">
+                        <img src="images/malili.jpg" alt="">
+                        <div class="logo-info">
+                            Led product distribution and optimized inventory through DMS.
+                        </div>
+                    </div>
+
+                    <div class="logo-container">
+                        <img src="images/wmi.png" alt="">
+                        <div class="logo-info">
+                            Developed and managed scholar portal and digital media communications.
+                        </div>
+                    </div>
+
+                    <div class="logo-container">
+                        <img src="images/medruok.png" alt="">
+                        <div class="logo-info">
+                            Built community agriculture initiatives and managed member programs.
+                        </div>
+                    </div>
+
+                    <div class="logo-container">
+                        <img src="images/iebc.png" alt="">
+                        <div class="logo-info">
+                            Served as Presiding Officer, tech support, and voter registration using KIEMS kits.
+                        </div>
+                    </div>
+
+                    <div class="logo-container">
+                        <img src="images/robisearch.jpg" alt="">
+                        <div class="logo-info">
+                            Consulted on multiple software development projects, providing technical guidance and reviews.
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </section>
 
@@ -149,33 +330,6 @@
 
             </div>
         </section>
-
-        <section class="partners">
-            <h2>Organizations I’ve Worked With</h2>
-
-            <div class="logo-slider">
-                <div class="logo-track">
-                    <!-- Repeat logos twice for seamless looping -->
-                    <img src="images/glory.jpg" alt="Wells Mountain Initiative">
-                    <img src="images/jkuat.png" alt="JKUAT">
-                    <img src="images/un.png" alt="United Nations">
-                    <img src="images/stkevin.jpg" alt="St. Kevin Hill Schools">
-                    <img src="images/malili.jpg" alt="Malili Distributors">
-                    <img src="images/wmi.png" alt="WMI">
-                    <img src="images/medruok.png" alt="Medruok">
-
-                    <!-- Duplicate -->
-                    <img src="images/glory.jpg">
-                    <img src="images/jkuat.png">
-                    <img src="images/un.png">
-                    <img src="images/stkevin.jpg">
-                    <img src="images/malili.jpg">
-                    <img src="images/wmi.png">
-                    <img src="images/medruok.png">
-                </div>
-            </div>
-        </section>
-
 
         <!-- CODE PLAYGROUND SECTION -->
         <section id="playground" class="fade-in-section" aria-labelledby="playground-header">
